# IPPP

./: .clang-format  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Drawing.cpp  Drawing.h  Edge.cpp  Edge.h  FindPQP.cmake  Findassimp.cmake  Graph.cpp  Graph.h  KDNode.h  KDTree.h  LICENSE.md  Node.cpp  Node.h  NormalRRTPlanner.cpp  NormalRRTPlanner.h  Planner.cpp  Planner.h  README.md  RRTPlanner.cpp  RRTPlanner.h  Sampling.cpp  Sampling.h  SearchNearestNeighbor.h  StarRRTPlanner.cpp  StarRRTPlanner.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h  Vec.h  VrepHelper.cpp  VrepHelper.h  appveyor.yml  coverity_model.c  (+4 more)
CMake/: FindEigen3.cmake  FindPQP.cmake  Findassimp.cmake  Findccd.cmake  Findfcl.cmake  Findnlohmann-json.cmake
core/: Base.cpp  CollisionDetection.cpp  Edge.cpp  Graph.cpp  Node.cpp  Sampling.cpp  TrajectoryPlanner.cpp
docs/: D-H_parameter_Jaco.m  Doxyfile  Doxyfile~  Style Guidelines.md  Style Guidelines.txt  (+1 more)
examples/: CMakeLists.txt  Constraint2D.cpp  ConstraintIiwa.cpp  GettingStarted.cpp  Jaco.cpp  JacoRRT.cpp  Kuka.cpp  KukaTuc.cpp  ParasolBenchmarks.cpp  Planner2D.cpp  cad.cpp  main.cpp
examples/GettingStarted/: CMakeLists.txt  main.cpp
examples/JacoPRM/: CMakeLists.txt  main.cpp
examples/JacoRRT/: CMakeLists.txt  main.cpp
examples/JacoRRT/spaces/: jaco.ttt
examples/KukaKR5/: CMakeLists.txt  main.cpp
examples/MA/: CMakeLists.txt  ConfigurationMA.cpp  ConfigurationMA.h  ConstraintIiwa.cpp  configSpace.cpp  evaluation2d.cpp  evaluationConstStepSize.cpp  evaluationConstTest.cpp  evaluationConstThreads.cpp  evaluationConstraint.cpp  evaluationConstraintObs.cpp  evaluationEndTest.cpp  evaluationEndTestConst.cpp  evaluationEndTestConst2.cpp  evaluationMobile.cpp  evaluationPiano2D.cpp  evaluationPoint2D.cpp  evaluationRRTOptimization.cpp  evaluationRRTs.cpp  evaluationSampler.cpp  evaluationSerial2D.cpp  evaluationStepSize.cpp  evaluationThreads.cpp  planning2dFigures.cpp  saveEnvironments.cpp
examples/PRM2D/: CMakeLists.txt  main.cpp
examples/ParasolBenchmarks/: CMakeLists.txt  main.cpp
examples/Planner/: CMakeLists.txt  CMakeLists.txt~  main.cpp
examples/Planner/spaces/: jaco.ttt
examples/Planner/ui/: Drawing.cpp  Drawing.h
examples/Planner2D/: CMakeLists.txt  main.cpp
examples/PlannerJaco/: CMakeLists.txt  main.cpp
examples/RRT2D/: CMakeLists.txt  main.cpp
examples/assets/assemblyModels/: box3.blend  box6.blend
examples/assets/parasol_benchmarks/Hedgehog/: hedgehog.env
examples/gui2D/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/models/: modelDirectory.h.in
examples/models/assembly/: HookAssembly.blend1  HookAssembly.mtl  bayonet.blend  bayonet.dae  box.blend  box.dae  box1.blend  box2.blend  box4.blend  box4.dae  box5.blend  box6.dae  box7.dae  box8.blend  box8.dae  box8withoutBox.dae  box9.blend  box9.dae  boxRot.blend  boxRot.dae  pentomino.blend  pentomino.dae  planarPuzzle1.blend  planarPuzzle1.dae  planarPuzzle2.blend  planarPuzzle2.dae  planarPuzzle3.blend
examples/models/parasol_benchmarks/: note.md
examples/models/parasol_benchmarks/alpha1.5/: alpha.query
examples/models/parasol_benchmarks/flange_1.0/: flange.env  flange.query
examples/testVec/: CMakeLists.txt  main.cpp
examples/ui/: BenchmarkReader.cpp  BenchmarkReader.h  CMakeLists.txt  Configurator.cpp  Configurator.h  Drawing.cpp  Drawing.h  Drawing2D.cpp  Drawing2D.h  Drawing2D.hpp  EnvironmentConfigurator.cpp  EnvironmentConfigurator.h  EnvironmentConfigurator.hpp  ModuleConfigurator.hpp  ModuleCreator.hpp  Udp.cpp  Udp.h  Writer.cpp  Writer.h  Writer.hpp
examples/ui/QtOpenGLMeshVisualizer/QtOpenGLMeshVisualizer/: CMakeLists.txt  KeyboardMovementController.cpp  KeyboardMovementController.h  MeshOpenGLVisualiser.cpp  MeshOpenGLVisualiser.h  OpenGLVisualizerWidget.cpp  OpenGLVisualizerWidget.h  OrbitControl.cpp  OrbitControl.h  QtOpenGLMeshVisualizer.pro  Trackball.cpp  Trackball.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/ui/QtOpenGLMeshVisualizer/QtOpenGLMeshVisualizer/VisualisationComponents/include/: ColorVisualiser.h  IColourSetable.h  IColourTypeSetable.h  IDrawFilter.h  IDrawable.h  IItemSelectable.h  IVisualiser.h  IVisulisationArea.h  VisualiserBase.h
examples/ui/QtOpenGLMeshVisualizer/QtOpenGLMeshVisualizer/VisualisationComponents/include/control/: IMovementControllable.h  IMovementHistory.h  MovementController.h
examples/ui/QtOpenGLMeshVisualizer/QtOpenGLMeshVisualizer/VisualisationComponents/src/: ColorVisualiser.cpp  IColourSetable.cpp  VisualiserBase.cpp
examples/ui/QtOpenGLMeshVisualizer/QtOpenGLMeshVisualizer/VisualisationComponents/src/control/: MovementController.cpp
examples/ui/vrep/: Helper.cpp  Helper.h
tests/: CMakeLists.txt
tests/dataObj/: CMakeLists.txt  edge.cpp  graph.cpp  node.cpp  pointList.cpp
tests/main/: CMakeLists.txt  clearWorkspace.cpp  obstacleWorkspace.cpp
tests/mainTest/: CMakeLists.txt  clearWorkspace.cpp  obstacleWorkspace.cpp
tests/module/: CMakeLists.txt  distanceMetric.cpp  evaluator.cpp  neighborFinders.cpp  pathModifier.cpp  sampler.cpp  sampling.cpp  trajectoryPlanner.cpp
tests/testAssets/: jsonSerializationTestDim2.json  jsonSerializationTestDim3.json  jsonSerializationTestDim5.json  jsonSerializationTestDim6.json
tests/ui/: CMakeLists.txt  jsonSerializer.cpp
tests/unitTests/: CMakeLists.txt
tests/unitTests/core/: CMakeLists.txt  node.cpp  utilities.cpp
tests/unitTests/core/dataObj/: CMakeLists.txt  edge.cpp  graph.cpp  node.cpp  pointList.cpp
tests/unitTests/core/module/: CMakeLists.txt  sampler.cpp  trajectoryPlanner.cpp
tests/unitTests/core/utility/: CMakeLists.txt  utilGeo.cpp
tests/unitTests/dataObj/: graph.cpp  pointList.cpp
tests/unitTests/module/: CMakeLists.txt  evaluator.cpp  neighborFinders.cpp  sampler.cpp  sampling.cpp
tests/unitTests/utility/: CMakeLists.txt  utilGeo.cpp
tests/utility/: CMakeLists.txt  utilGeo.cpp
unitTest/: CMakeLists.txt  testNode  testVec.cpp
unitTest/core/: CMakeLists.txt  node.cpp  trajectoryPlanner.cpp  utilities.cpp  vec.cpp
(+846 files in other folders)
